--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SuperCheap" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SuperCheap" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -11,7 +11,12 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/green</item>
+        <item name="android:textColor">@color/white</item>
+
+        <item name="buttonStyle">@style/myButtonStyle</item>
     </style>
 
     <style name="Theme.SuperCheap.NoActionBar">
@@ -22,4 +27,9 @@
     <style name="Theme.SuperCheap.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.SuperCheap.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="myButtonStyle" parent="@style/Widget.AppCompat.Button">
+        <item name="android:radius">40dp</item>
+        <item name="android:color">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
