--- a/app/src/main/res/layout/view_sighin.xml
+++ b/app/src/main/res/layout/view_sighin.xml
@@ -3,147 +3,133 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SigninActivity"
-    android:background="@color/green">
+    android:layout_height="wrap_content"
+    android:background="@color/green"
+    tools:context=".SigninActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/body_layer"
-        android:layout_width="404dp"
-        android:layout_height="721dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/password_label"
-            android:layout_width="119dp"
-            android:layout_height="38dp"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="32dp"
             android:text="password:"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.127"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.602" />
+            app:layout_constraintTop_toBottomOf="@+id/username_label" />
 
         <TextView
             android:id="@+id/username_label"
-            android:layout_width="118dp"
-            android:layout_height="44dp"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="48dp"
             android:text="username:"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.122"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.44" />
+            app:layout_constraintTop_toBottomOf="@+id/body_second_title" />
 
         <Button
             android:id="@+id/reset_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="48dp"
             android:onClick="reset"
             android:text="reset"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.696"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.805" />
+            app:layout_constraintHorizontal_bias="0.506"
+            app:layout_constraintStart_toEndOf="@+id/sigh_in_button"
+            app:layout_constraintTop_toBottomOf="@+id/password_input" />
 
         <TextView
             android:id="@+id/body_second_title"
             android:layout_width="378dp"
             android:layout_height="41dp"
+            android:layout_marginTop="16dp"
             android:text="log in to find the cheapest cart for you"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.192"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.255" />
+            app:layout_constraintTop_toBottomOf="@+id/body_firest_title" />
 
         <TextView
             android:id="@+id/body_firest_title"
             android:layout_width="335dp"
             android:layout_height="56dp"
+            android:layout_marginTop="16dp"
             android:text="Welcome To SuperCheap!"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.521"
+            app:layout_constraintHorizontal_bias="0.506"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.069" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/sigh_up_label"
-            android:layout_width="236dp"
-            android:layout_height="42dp"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
             android:text="Dont have an account?"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.095"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.975" />
+            app:layout_constraintTop_toBottomOf="@+id/sigh_in_button" />
 
         <Button
             android:id="@+id/sigh_in_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="sighIn"
-            android:text="Sigh In"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.278"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="64dp"
+            android:layout_marginTop="48dp"
+            android:onClick="signIn"
+            android:text="Sign In"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.783" />
+            app:layout_constraintTop_toBottomOf="@+id/password_label" />
 
         <Button
             android:id="@+id/sigh_up_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="sighUp"
-            android:text="Sigh Up"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="12dp"
+            android:onClick="signUp"
+            android:text="Sign Up"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.88"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.993" />
+            app:layout_constraintHorizontal_bias="0.444"
+            app:layout_constraintStart_toEndOf="@+id/sigh_up_label"
+            app:layout_constraintTop_toBottomOf="@+id/reset_button" />
 
         <EditText
             android:id="@+id/password_input"
-            android:layout_width="214dp"
-            android:layout_height="53dp"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="32dp"
             android:ems="10"
+            android:hint="password"
             android:inputType="textPassword"
-            android:text="password"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.809"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.611" />
+            app:layout_constraintHorizontal_bias="0.366"
+            app:layout_constraintStart_toEndOf="@+id/password_label"
+            app:layout_constraintTop_toBottomOf="@+id/username_input" />
 
         <EditText
             android:id="@+id/username_input"
-            android:layout_width="213dp"
-            android:layout_height="52dp"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="48dp"
             android:ems="10"
+            android:hint="insert here username"
             android:inputType="textPersonName"
-            android:text="insert here username"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.811"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.441" />
+            app:layout_constraintHorizontal_bias="0.333"
+            app:layout_constraintStart_toEndOf="@+id/username_label"
+            app:layout_constraintTop_toBottomOf="@+id/body_second_title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
