--- a/app/src/main/res/layout/activity_drawer_manager.xml
+++ b/app/src/main/res/layout/activity_drawer_manager.xml
@@ -18,7 +18,7 @@
         android:layout_gravity="start"
         android:id="@+id/nav_view"
         app:headerLayout="@layout/main_drawer_header"
-        app:menu="@menu/main_drawer_menu"/>
+        app:menu="@menu/manager_drawer_menu"/>
 
 
 
