--- a/app/src/main/res/menu/user_drawer_menu.xml
+++ b/app/src/main/res/menu/user_drawer_menu.xml
@@ -5,7 +5,7 @@
             android:title="@string/choose_cart"/>
         <item android:id="@+id/my_cart"
             android:title="@string/my_cart"/>
-        <item android:id="@+id/manager_page"
-            android:title="@string/manager_page"/>
+        <item android:id="@+id/logout"
+            android:title="@string/log_out"/>
     </group>
 </menu>
