--- a/app/src/main/res/layout/activity_head_buttom_template.xml
+++ b/app/src/main/res/layout/activity_head_buttom_template.xml
@@ -23,12 +23,12 @@
             <androidx.constraintlayout.utils.widget.ImageFilterView
                 android:id="@+id/logo_pic"
                 android:layout_width="match_parent"
-                android:layout_height="142dp"
+                android:layout_height="155dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="0dp"
-                android:layout_marginTop="19dp"
+                android:layout_marginTop="6dp"
                 android:layout_marginEnd="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -39,17 +39,16 @@
 
             <TextView
                 android:id="@+id/oweners"
-                android:layout_width="wrap_content"
-                android:layout_height="67dp"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
                 android:layout_below="@+id/logo_pic"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="46dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="51dp"
-                android:layout_marginBottom="56dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginEnd="0dp"
                 android:text="by Eylon Nammat, MIchael Matveev, Ben Cohen"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -68,15 +67,17 @@
 
             <TextView
                 android:id="@+id/head_firest_title"
-                android:layout_width="wrap_content"
-                android:layout_height="45dp"
+                android:layout_width="270dp"
+                android:layout_height="58dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="41dp"
+                android:layout_marginStart="71dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="70dp"
+                android:fontFamily="@font/spicy_rice"
                 android:text="SuperCheap"
+                android:textSize="48sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -85,15 +86,17 @@
 
             <TextView
                 android:id="@+id/head_second_title"
-                android:layout_width="378dp"
-                android:layout_height="35dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/head_firest_title"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="52dp"
-                android:layout_marginEnd="19dp"
+                android:layout_marginStart="41dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="42dp"
+                android:fontFamily="@font/spicy_rice"
                 android:text="The Best SuperMarket app For You"
+                android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -105,7 +108,7 @@
             android:id="@+id/frame_container"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
