--- a/app/src/main/res/layout/view_sighin.xml
+++ b/app/src/main/res/layout/view_sighin.xml
@@ -62,8 +62,8 @@
 
         <TextView
             android:id="@+id/body_firest_title"
-            android:layout_width="335dp"
-            android:layout_height="56dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Welcome To SuperCheap!"
             app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +83,7 @@
 
         <Button
             android:id="@+id/sigh_in_button"
-            android:layout_width="100dp"
+            android:layout_width="115dp"
             android:layout_height="50dp"
             android:layout_marginStart="64dp"
             android:layout_marginTop="48dp"
@@ -94,7 +94,7 @@
 
         <Button
             android:id="@+id/sigh_up_button"
-            android:layout_width="100dp"
+            android:layout_width="115dp"
             android:layout_height="50dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="12dp"
@@ -111,8 +111,8 @@
             android:layout_height="50dp"
             android:layout_marginTop="32dp"
             android:ems="10"
-            android:hint="password"
             android:inputType="textPassword"
+            android:text="password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.366"
             app:layout_constraintStart_toEndOf="@+id/password_label"
