--- a/app/src/main/res/layout/view_sighin.xml
+++ b/app/src/main/res/layout/view_sighin.xml
@@ -111,8 +111,8 @@
             android:layout_height="50dp"
             android:layout_marginTop="32dp"
             android:ems="10"
+            android:hint="password"
             android:inputType="textPassword"
-            android:text="password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.366"
             app:layout_constraintStart_toEndOf="@+id/password_label"
